--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "NODE_ENV=production tsx ./server/index.ts",
+    "prod": "NODE_ENV=production tsx ./server/index.ts",
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
