--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.11.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
     "hono": "^4.4.2",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
@@ -22,13 +18,15 @@
     "vike": "^0.4.172"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@hono/vite-dev-server": "^0.12.1",
     "@types/node": "^20.12.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
+    "typescript-eslint": "^8.18.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.12"
   }
